--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>Look Down</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -49,7 +49,21 @@ animation: AnimationName 30s linear infinite;
       position: absolute;
       height: 100%;
       width: 100%;
+      transition: 60s all linear;
       z-index: -1;
+    }
+
+    .image .mom {
+    position: absolute;
+    left: 225px;
+    top: 215px;
+    background: white;
+    width: 130px;
+    border: none;
+    transform: rotate(-4deg);
+    opacity: 0;
+    transition: all 2s linear;
+    height: auto;
     }
 
     .hatchet {
@@ -71,15 +85,17 @@ animation: AnimationName 30s linear infinite;
     .image {
       position: fixed;
       left: 0;
-      min-width: 1000px;
+      width: 1600px;
       top: 0;
-      max-width: 100%;
-      max-height: 100%;
       transition: 1s linear all;
     }
 
-    .ti-container {
+    .trans .ti-container {
       background: rgba(255,255,255,1);
+    }
+    .ti-container {
+      background: rgba(255,255,255,.0);
+      transition: 1s all linear;
       padding: 3px 5px;
       display: inline-block;
     }
@@ -115,11 +131,13 @@ animation: AnimationName 30s linear infinite;
 </div> 
   <div class="light">
 
-</div>  <img src="bgtrans.gif"/>
+</div>  
+<img src="bgtrans.gif"/>
 
+<img class="mom" src="mom.png"/>
 </div>
 <div class="flex">
-  <div class="demo" id='element'>&shy;
+  <div class="demo trans" id='element'>&shy;
   </div>
 </div>
   <script type="text/javascript">
@@ -131,19 +149,103 @@ animation: AnimationName 30s linear infinite;
   callback: function() { 
     $('.hatchet').css('opacity', '.1');
     $('.light').css('opacity', '.1');
-    $('.ti-cursor').css('opacity', '0');
-  }
-})/*
-.type('Our wallpaper, as of late, has fallen ill to a peculiar')
+    $('.mom').css("opacity","1");
+    var instance2 = new TypeIt('#element', {
+        speed: 60,
+        autoplay: true,
+        loop: false,
+        callback: function() {
+          $('.mom').attr("src","mominnavy.png");
+          var instance4 = new TypeIt('#element', {
+          speed: 60,
+          autoplay: true,
+          loop: false,
+          callback: function() {
+            $('#element').removeClass('trans');
+            var instance3 = new TypeIt('#element', {
+              speed: 60,
+              autoplay: true,
+              loop: false,
+            }).type('..I..')
+              .pause(50)
+              .empty()
+              .pause(2000)
+              .options({speed: 60})
+              .type(' Oh.')
+              .pause(7000)
+              .break()
+              .pause(1000)
+              .break()
+              .pause(1000)
+              .type(' It <em>spread</em>.');
+              }
+          }).options({speed: 40})
+            .type('IN THE')
+            .pause(20)
+            .empty()
+            .pause(100)
+            .type('OUT THE')
+            .pause(20)
+            .empty()
+            .pause(100)
+            .type('DYLA')
+            .pause(50)
+            .empty()
+            .pause(100)
+            .type('DYLAN')
+            .pause(50)
+            .empty()
+            .pause(100)
+            .type('HEROI')
+            .pause(50)
+            .empty()
+            .pause(100)
+            .type('OVER TH')
+            .pause(50)
+            .empty()
+            .pause(100)
+            .type('RECURRI')
+            .pause(50)
+            .empty()
+            .pause(100)
+            .type('BLUE BIR')
+            .pause(50)
+            .empty()
+            .pause(100)
+            .type('SOMEWH')
+            .pause(50)
+            .empty()
+            .pause(100)
+            .type('..I..')
+            .pause(50)
+            .empty()
+            .pause(100)
+            .type('..I..')
+            .pause(50)
+            .empty()
+            .pause(100);
+          }}).pause(1000).options({speed: 60})
+        .type('though holding no prior relevance to gray infected textile sewn with off-red veinery, some type of 1950s vintage needle kit, receeding ventillation into oxidized spores, contributing to the spreading of the pulsing prior, mathematical geometries on wallpaper obscured by growing fungus, kansasesque gray covered in complete circles, incompleteness circles swirling pulsing blue liquid serrating clensing absestos calloused over off-red poppy print walling then resetting, relevant, reverent, rectangulant')
+        .type(' reclusant, in response to touch, to particular pulsing priors, founded stalling electric wirelike liquid scalding through rusted pipery, as expected, disconnected circutry leaks pusslike, as dirt, as water, as grease-darkened vertigo patterns, spores fleurish kansasesque and serrating, as of late, I\'ve been ')
+        .pause(200)
+        .empty();
+
+
+         
+      }
+      })
+.type('Our wallpaper, as of late, has fallen ill to a peculiar species')
 .break()
-.type('species of mold.')
+.type(' of mold.')
 .pause(3000)
 .break()
-.pause(500)
-.type('The mold is characterized by its')
+.pause(200)
 .break()
-.type('off-red color and oil-like appearance.')
-.pause(700)
+.pause(500)
+.type('The mold is characterized by its off-red color and oil-like appearance')
+.pause(1000)
+.break()
+.pause(200)
 .break()
 .pause(200)
 .type('It pulses in response to touch.')
@@ -157,87 +259,40 @@ animation: AnimationName 30s linear infinite;
 .pause(700)
 .options({speed: 60})
 .break()
-.pause(300)
+.pause(200)
+.break()
+.pause(200)
 .type('(The date held no prior relevance.)')
 .pause(5000)
 .empty()
 .pause(1000)
-.type('While repuslive in visual appareance, there\'s something familiar to the spore\'s odor, not entirely unlike the aftermath of dishes left unwashed in the sink.')
+.type('While repulsive in visual appareance, there\'s something familiar to the spore\'s odor, not entirely unlike the aftermath of dishes left unwashed in the sink overnight.')
 .pause(5000)
 .empty()
-.break()
 .pause(200)
-.type('Still, the kids')
-.pause(3000)
+.type('Still, my s')
+.pause(1000)
 .delete(4)
 .pause(1000)
-.type('discomfort such a grotesque scenario would is unfitting for a family such as ours to be living in. ')
+.type('the discomfort such a grotesque scenario would is unfitting for a family such as ours to be living in. ')
 .pause(5000)
-.type('Thus...')
-.pause(5000)
-.empty()
-.type('Though requiring significant grease,')
+.type('Thus,')
+.pause(700)
 .break()
-.pause(100)
-.type('The only resolution is the complete removal of the walling from the household.')
-.pause(5000)
-.empty()*/
+.pause(200)
+.break()
+.pause(200)
+.type('I\'ve decided the only resolution is the complete removal of the walling from the household.')
+.pause(3000)
+.break()
+.pause(200)
+.break()
+.pause(200)
+.type('When I return home from work,')
+.empty()
 .pause(100);
 
 
-
-instance.options({speed: 60})
-.type('though holding no prior relevance, to gray infected textile sewn with off-red veinery, some type of 1950s vintage kit, receeding ventillation into oxidized spores, contributional spreading to the pulsing prior, mathematical geometries obscured by growing fungus, kansasesque gray covered in complete circles, incomplete circles swirling pulsing blue liquid serrating clensing absestos calloused over off-red poppy printed walling then resetting, relevant, reverent, rectangulant')
-.type(' reclusant, in response to touch, to peculiar pulsing priors, founded whirring electric wirelike liquid scalding through rusting pipery, as expected, as disconnected circutry, as leaking pusslike, as dirt, as water, as ditry water streaks darker on the walls, spores fleurish kansasesque and serrating, as of late, I\'ve been ')
-.empty()
-
-.options({speed: 40})
-.type('IN THE')
-.pause(20)
-.empty()
-.pause(100)
-.type('OUT THE')
-.pause(20)
-.empty()
-.pause(100)
-.type('DYLA')
-.pause(50)
-.empty()
-.pause(100)
-.type('DYLAN')
-.pause(50)
-.empty()
-.pause(100)
-.type('HEROI')
-.pause(50)
-.empty()
-.pause(100)
-.type('OVER TH')
-.pause(50)
-.empty()
-.pause(100)
-.type('RECURRI')
-.pause(50)
-.empty()
-.pause(100)
-.type('BLUE BIR')
-.pause(50)
-.empty()
-.pause(100)
-.type('SOMEWH')
-.pause(50)
-.empty()
-.pause(100)
-.type('..I..')
-.pause(50)
-.empty()
-.pause(2000)
-.options({speed: 60})
-.type('Oh.')
-.pause(1000)
-.break()
-.break()
-.type(' It <em>spread</em>.');
 
   
 
