--- a/index.html
+++ b/index.html
@@ -224,7 +224,10 @@ animation: AnimationName 30s linear infinite;
             .pause(50)
             .empty()
             .pause(100);
-          }}).pause(1000).options({speed: 60})
+          }})
+
+.type('In returning home from work, I inspect the condition of the mold and it\'s')
+.empty().options({speed: 60})
         .type('though holding no prior relevance to gray infected textile sewn with off-red veinery, some type of 1950s vintage needle kit, receeding ventillation into oxidized spores, contributing to the spreading of the pulsing prior, mathematical geometries on wallpaper obscured by growing fungus, kansasesque gray covered in complete circles, incompleteness circles swirling pulsing blue liquid serrating clensing absestos calloused over off-red poppy print walling then resetting, relevant, reverent, rectangulant')
         .type(' reclusant, in response to touch, to particular pulsing priors, founded stalling electric wirelike liquid scalding through rusted pipery, as expected, disconnected circutry leaks pusslike, as dirt, as water, as grease-darkened vertigo patterns, spores fleurish kansasesque and serrating, as of late, I\'ve been ')
         .pause(200)
@@ -274,7 +277,7 @@ animation: AnimationName 30s linear infinite;
 .pause(1000)
 .delete(4)
 .pause(1000)
-.type('the discomfort such a grotesque scenario would is unfitting for a family such as ours to be living in. ')
+.type('the discomfort such a grotesque scenario would bring is unfitting for a family such as ours to be living in. ')
 .pause(5000)
 .type('Thus,')
 .pause(700)
@@ -282,15 +285,8 @@ animation: AnimationName 30s linear infinite;
 .pause(200)
 .break()
 .pause(200)
-.type('I\'ve decided the only resolution is the complete removal of the walling from the household.')
-.pause(3000)
-.break()
-.pause(200)
-.break()
-.pause(200)
-.type('When I return home from work,')
-.empty()
-.pause(100);
+.type('I\'ve decided the only resolution is the complete removal of the wallpaper from the household.')
+.pause(3000);
 
 
 
