--- a/index.html
+++ b/index.html
@@ -285,7 +285,8 @@ animation: AnimationName 30s linear infinite;
 .break()
 .pause(200)
 .type('I\'ve decided the only resolution is the complete removal of the wallpaper from the household.')
-.pause(3000);
+.pause(3000)
+.empty();
 
 
 
