--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ animation: AnimationName 30s linear infinite;
           }})
 
 .type('In returning home from work, I inspect the condition of the mold and it\'s')
-.empty().options({speed: 60})
+.empty().pause(3000).options({speed: 60})
         .type('though holding no prior relevance to gray infected textile sewn with off-red veinery, some type of 1950s vintage needle kit, receeding ventillation into oxidized spores, contributing to the spreading of the pulsing prior, mathematical geometries on wallpaper obscured by growing fungus, kansasesque gray covered in complete circles, incompleteness circles swirling pulsing blue liquid serrating clensing absestos calloused over off-red poppy print walling then resetting, relevant, reverent, rectangulant')
         .type(' reclusant, in response to touch, to particular pulsing priors, founded stalling electric wirelike liquid scalding through rusted pipery, as expected, disconnected circutry leaks pusslike, as dirt, as water, as grease-darkened vertigo patterns, spores fleurish kansasesque and serrating, as of late, I\'ve been ')
         .pause(200)
@@ -268,7 +268,7 @@ animation: AnimationName 30s linear infinite;
 .pause(5000)
 .empty()
 .pause(1000)
-.type('While repulsive in visual appareance, there\'s something familiar to the spore\'s odor, not entirely unlike the aftermath of dishes left unwashed in the sink overnight.')
+.type('While repulsive in visual appearance, there\'s something familiar to the spore\'s odor, not entirely unlike the aftermath of dishes left unwashed in the sink overnight.')
 .pause(5000)
 .empty()
 .pause(200)
@@ -284,7 +284,7 @@ animation: AnimationName 30s linear infinite;
 .pause(200)
 .break()
 .pause(200)
-.type('I\'ve decided the only resolution is the complete removal of the wallpaper from the household.')
+.type('I have decided the only resolution is the complete removal of the wallpaper from the household.')
 .pause(3000)
 .empty();
 
