--- a/room2.html
+++ b/room2.html
@@ -18,27 +18,6 @@
   $(document).ready(function() {
     $( 'body' ).hide().fadeIn(1000);   
 
-    $("#left").mouseenter(function () {
-      setCenter("Home")
-    });
-    $("#left").click(function () {
-      setCenter("")
-     // alert(":)");
-    });
-
-    $("#left").mouseout(function () {
-      setCenter("")
-    });
-
-
-    $("#right").mouseenter(function () {
-      setCenter("Room 2")
-    });
-
-    $("#right").mouseout(function () {
-      setCenter("")
-    });
-
     var img=$('#image');
     $(document).ready(function(e) {
       $(document).mousemove(function(e) {
@@ -56,13 +35,12 @@
 </script>
 </head>
 <body>
-<audio src="music/room1.mp3" loop="true" autoplay hidden ></audio>
  <div id="main" class="hatch rise">
   <div class="side Aligner left" >
     <a class="Aligner-item" id="left" href="room1.html"><img src="arrow-left.png"/></a>
   </div>
   <div class="side Aligner right">
-    <a class="Aligner-item"  id="right" href="room2.html"><img src="arrow-right.png"/></a>
+    <a class="Aligner-item"  id="right" href="room3.html"><img src="arrow-right.png"/></a>
   </div>
   <div class="Aligner">
    <div id="middle" class="Aligner-item center">
@@ -104,7 +82,7 @@
 13/56 - Despite the passage of several months, the wounds have yet to close. After falling asleep on the couch, I awoke with a remote in my hand and an incompleted channel number typed into the television screen. 
 </p><p>
 
-42/3 - I was able to at last change the station from three-two-four. Unfortunately, when I try to press the button, my thumb turned into gray rectangles. My son calls. He should be coming to visit soon. There’s a new episode of his favourite sit-com on. He asks again about channel three hundred and four, but the static blurs his voice into nondescript syllables. He reaches his arm through the receivere his gray and white bled into mine and slice my jaw off my face. It falls to the carpet and succumbs to static. I’ll ask the husband to fix it when he gets in. He’s out now. (There'll be another tornado tomorrow.)
+42/3 - I was able to at last change the station from three-two-four. Unfortunately, when I try to press the button, my thumb turned into gray rectangles. My son calls. He should be coming to visit soon. There’s a new episode of his favourite sit-com on. He asks again about channel three hundred and four, but the static blurs his voice into nondescript syllables. He reaches his arm through the receivere his gray and white bled into mine and slice my jaw off my face. It falls to the carpet and succumbs to static. I’ll ask the husband to fix it when he gets in. He’s out now.
 </p>
       </div>
     </div>
